--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>LetMeIntroduceSTARBUCKS</title>
 </head>
 
-<body>
-     <h1>스타벅스 최애 메뉴 소개<img src="./barista/barista.png" alt="barista" width="17%"></h1>
+<body style="background-color: #f2f0eb;">
+     <h1 style="color: #00754a;">스타벅스 최애 메뉴 소개<img src="./barista/barista.png" alt="barista" width="17%"></h1>
      <hr>
-     <span style="font-size:small; font-weight: bold;">3위까지 소개합니당 ᡣ˶ᵔ ᵕ ᵔ˶𐭩 ♡</span><br>
-        <h2>음료<img src="./barista/baristawithcoffee.png" alt="baristawithcoffee" width="10%"></h2>
-        <div style="background-color: darkgreen; color:whitesmoke; padding: 10px;"><ul>
+     <span style="color: #00754a; font-size:small; font-weight: bold;">3위까지 소개합니당 ᡣ˶ᵔ ᵕ ᵔ˶𐭩 ♡</span><br>
+        <h2 style="color: #00754a;">음료<img src="./barista/baristawithcoffee.png" alt="baristawithcoffee" width="10%"></h2>
+        <div style="background-color: #d4e9e2; color: #00754a; padding: 5px;"><ul>
               <li>아이스 카페 아메리카노<img src="./drinks/americano.png" alt="americano" width="5%"></li>
               <li>바닐라 크림 콜드 브루<img src="./drinks/vanillacreamcoldbrew.png" alt="vanillacreamcoldbrew" width="5%"></li>
               <li>카페 라떼<img src="./drinks/latte.png" alt="latte" width="10%"></li>
