--- a/index.html
+++ b/index.html
@@ -11,38 +11,43 @@
 
      <h1 style="color: #00754a;">스타벅스 최애 메뉴 소개<img src="./barista/barista.png" alt="barista" width="17%"></h1>
      <hr>
-     <span style="color: #00754a; font-size:small; font-weight: bold;">3위까지 소개합니당 ᡣ˶ᵔ ᵕ ᵔ˶𐭩 ♡</span><br>
+     <span style="color: #00754a; font-size:small; font-weight: bold;">
+      3위까지 소개합니당 ᡣ˶ᵔ ᵕ ᵔ˶𐭩 ♡<br>
+      메뉴 사진을 클릭하면 스타벅스 공식 메뉴 소개 페이지로 이동해요!</span>
      <br>
      <h2 style="color: #00754a;">음료<img src="./barista/baristawithcoffee.png" alt="baristawithcoffee" width="10%"></h2>
      <div style="background-color: #d4e9e2; color: #00754a; padding: 5px;">
-            <ol>
-              <em><b><li>아이스 카페 아메리카노 <img src="./drinks/americano.png" alt="americano" width="5%"></li>
-              <li>바닐라 크림 콜드 브루 <img src="./drinks/vanillacreamcoldbrew.png" alt="vanillacreamcoldbrew" width="5%"></li>
-              <li>카페 라떼 <img src="./drinks/latte.png" alt="latte" width="9%"></li></b></em>
-            </ol>
-        </div>
+      <ol>
+       <em><b><li>아이스 카페 아메리카노 <a href="https://www.starbucks.co.kr/menu/drink_view.do?product_cd=110563" target="_blank"><img src="./drinks/americano.png" alt="americano" width="5%"></a></li>
+       <li>바닐라 크림 콜드 브루 <a href="https://www.starbucks.co.kr/menu/drink_view.do?product_cd=9200000000487" target="_blank"><img src="./drinks/vanillacreamcoldbrew.png" alt="vanillacreamcoldbrew" width="5%"></a></li>
+       <li>카페 라떼 <a href="https://www.starbucks.co.kr/menu/drink_view.do?product_cd=41" target="_blank"><img src="./drinks/latte.png" alt="latte" width="9%"></a></li>
+       </b></em>
+      </ol>
+     </div>
 
      <br>
 
-        <h2 style="color: #00754a;">케이크<img src="./barista/baristawithcake.png" alt="baristawithcake" width="10%"></h2>
-        <div style="background-color: #d4e9e2; color: #00754a; padding: 5px;">
-               <ol>
-                 <em><b><li>고구마 카스텔라 생크림 케이크 <img src="./cake/sweetphotatocake.png" alt="sweetphotatocake" width="9%"></li>
-                 <li>바스크 초코 치즈 케이크 <img src="./cake/basquecheesecake.png" alt="basquecheesecake" width="9%"></li>
-                 <li>딸기 초코 생크림 케이크 <img src="./cake/strawberrychococake.png" alt="strawberrychococake" width="9%"></li></b></em>
-               </ol>
-           </div>
+     <h2 style="color: #00754a;">케이크<img src="./barista/baristawithcake.png" alt="baristawithcake" width="10%"></h2>
+     <div style="background-color: #d4e9e2; color: #00754a; padding: 5px;">
+      <ol>
+       <em><b><li>고구마 카스텔라 생크림 케이크 <a href="https://www.starbucks.co.kr/menu/food_view.do?product_cd=9300000005575" target="_blank"><img src="./cake/sweetphotatocake.png" alt="sweetphotatocake" width="9%"></a></li>
+       <li>바스크 초코 치즈 케이크 <a href="https://www.starbucks.co.kr/menu/food_view.do?product_cd=9300000005454" target="_blank"><img src="./cake/basquecheesecake.png" alt="basquecheesecake" width="9%"></a></li>
+       <li>딸기 초코 생크림 케이크 <a href="https://www.starbucks.co.kr/menu/food_view.do?product_cd=9300000005594" target="_blank"><img src="./cake/strawberrychococake.png" alt="strawberrychococake" width="9%"></a></li>
+       </b></em>
+      </ol>
+     </div>
 
      <br>
 
-           <h2 style="color: #00754a;">빵<img src="./barista/baristawithbread.png" alt="baristawithbread" width="10%"></h2>
-           <div style="background-color: #d4e9e2; color: #00754a; padding: 5px;">
-                  <ol>
-                    <em><b><li>잉글리쉬 스콘 <img src="./bread/englishscone.png" alt="englishscone" width="9%"></li>
-                    <li>바질 토마토 탕종 베이글 샌드 <img src="./bread/basiltomatobagle.png" alt="basiltomatobagle" width="12%"></li>
-                    <li>더블 에그 브렉퍼스트 & 체다 샌드위치 <img src="./bread/eggbreakfast.png" alt="eggbreakfast" width="9%"></li></b></em>
-                  </ol>
-              </div>
+     <h2 style="color: #00754a;">빵<img src="./barista/baristawithbread.png" alt="baristawithbread" width="10%"></h2>
+     <div style="background-color: #d4e9e2; color: #00754a; padding: 5px;">
+      <ol>
+       <em><b><li>잉글리쉬 스콘 <a href="https://www.starbucks.co.kr/menu/food_view.do?product_cd=9300000005663" target="_blank"><img src="./bread/englishscone.png" alt="englishscone" width="9%"></a></li>
+       <li>바질 토마토 탕종 베이글 샌드 <a href="https://www.starbucks.co.kr/menu/food_view.do?product_cd=9300000005233" target="_blank"><img src="./bread/basiltomatobagle.png" alt="basiltomatobagle" width="12%"></a></li>
+       <li>더블 에그 브렉퍼스트 & 체다 샌드위치 <a href="https://www.starbucks.co.kr/menu/food_view.do?product_cd=9300000005697" target="_blank"><img src="./bread/eggbreakfast.png" alt="eggbreakfast" width="9%"></a></li>
+       </b></em>
+      </ol>
+     </div>
               
 </body>
 
