real fixed version

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
      <h1 style="color: #00754a;">스타벅스 최애 메뉴 소개<img src="./barista/barista.png" alt="barista" width="17%"></h1>
      <hr>
-     <span style="color: #00754a; font-size:small; font-weight: bold;">
+     <span style="color: #00754a; font-size:medium; font-weight: bold;">
       3위까지 소개합니당 ᡣ˶ᵔ ᵕ ᵔ˶𐭩 ♡<br>
       메뉴 사진을 클릭하면 스타벅스 공식 메뉴 소개 페이지로 이동해요!</span>
      <br>
